Bug 248909 - WebDriver: [Cocoa] [Actions] [Key] Single grapheme clusters return an exception indicating the key is not valid
Summary: WebDriver: [Cocoa] [Actions] [Key] Single grapheme clusters return an excepti...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebDriver (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Patrick Angle
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-07 14:23 PST by Patrick Angle
Modified: 2023-01-19 09:51 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Angle 2022-12-07 14:23:59 PST
These are being caused by tests that send grapheme clusters represented by more than one unique code point, including emojis and non-English composed characters.
Comment 1 Patrick Angle 2022-12-07 14:24:03 PST
<rdar://100588599>
Comment 2 Patrick Angle 2022-12-08 08:15:39 PST
Pull request: https://github.com/WebKit/WebKit/pull/7323
Comment 3 EWS 2023-01-19 09:51:32 PST
Committed 259092@main (bd0b584ba907): <https://commits.webkit.org/259092@main>

Reviewed commits have been landed. Closing PR #7323 and removing active labels.