Source/WebKit/UIProcess/Automation/ios/WebAutomationSessionIOS.mm
@@ -73,17 +73,22 @@ void WebAutomationSession::platformSimulateKeyboardInteraction(WebPageProxy& pag
     // The modifiers changed by the virtual key when it is pressed or released.
     WebEventFlags changedModifiers = 0;
 
-    // UIKit does not send key codes for virtual keys even for a hardware keyboard.
-    // Instead, it sends single unichars and WebCore maps these to "windows" key codes.
-    // Synthesize a single unichar such that the correct key code is inferred.
-    std::optional<unichar> charCode;
-    std::optional<unichar> charCodeIgnoringModifiers;
+    NSString *characters;
+    NSString *unmodifiedCharacters;
 
+    // FIXME: consider using UIKit SPI to normalize 'characters', i.e., changing * to Shift-8,
+    // and passing that in to charactersIgnoringModifiers. This is probably not worth the trouble
+    // unless it causes an actual behavioral difference.
     // Figure out the effects of sticky modifiers.
     WTF::switchOn(key,
         [&] (VirtualKey virtualKey) {
-            charCode = charCodeForVirtualKey(virtualKey);
-            charCodeIgnoringModifiers = charCodeIgnoringModifiersForVirtualKey(virtualKey);
+            // UIKit does not send key codes for virtual keys even for a hardware keyboard. Instead, it sends single
+            // unichars and WebCore maps these to "windows" key codes. Synthesize a single unichar such that the correct
+            // key code is inferred.
+            if (auto charCode = charCodeForVirtualKey(virtualKey))
+                characters = [NSString stringWithCharacters:&charCode.value() length:1];
+            if (auto charCodeIgnoringModifiers = charCodeIgnoringModifiersForVirtualKey(virtualKey))
+                unmodifiedCharacters = [NSString stringWithCharacters:&charCodeIgnoringModifiers.value() length:1];
 
             switch (virtualKey) {
             case VirtualKey::Shift:
@@ -111,17 +116,12 @@ void WebAutomationSession::platformSimulateKeyboardInteraction(WebPageProxy& pag
             }
         },
         [&] (CharKey charKey) {
-            charCode = (unichar)charKey;
-            charCodeIgnoringModifiers = (unichar)charKey;
+            characters = charKey;
+            unmodifiedCharacters = charKey;
         }
     );
 
-    // FIXME: consider using UIKit SPI to normalize 'characters', i.e., changing * to Shift-8,
-    // and passing that in to charactersIgnoringModifiers. This is probably not worth the trouble
-    // unless it causes an actual behavioral difference.
-    NSString *characters = charCode ? [NSString stringWithCharacters:&charCode.value() length:1] : nil;
-    NSString *unmodifiedCharacters = charCodeIgnoringModifiers ? [NSString stringWithCharacters:&charCodeIgnoringModifiers.value() length:1] : nil;
-    BOOL isTabKey = charCode && charCode.value() == NSTabCharacter;
+    BOOL isTabKey = characters.length == 1 && [characters characterAtIndex:0] == NSTabCharacter;
 
     // This is used as WebEvent.keyboardFlags, which are only used if we need to
     // send this event back to UIKit to be interpreted by the keyboard / input manager.
